--- a/cap-08-formatacaoTextoDigitado.html
+++ b/cap-08-formatacaoTextoDigitado.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br"><!--ctrl + dois pontos comenta-->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -35,7 +35,13 @@
     <p>Existe também o <u>sublinhado</u> com a tag U (não semântica).</p>
     <h2>Texto sobrescrito</h2>
     <p>Para inserir coisas do tipo X<sup>20</sup>+3</p>
+    <p>Z<sup>23</sup>+12</p>
     <h2>Texto subscrito</h2>
     <p>Para inserir coisas do tipo H<sub>2</sub>O</p>
+    <p>H<sub>4</sub>O</p>
+    <p>H<sub>3</sub>O</p>
+    <!--ctrl + shift + p faz com que você possa encapsular pesquisando "abrev" -->
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore quidem ipsa, ad harum dignissimos consequatur similique rerum molestias, enim ipsum esse, <mark style="background-color:aquamarine;">possimus tenetur quibusdam?</mark> Voluptas placeat at ipsum dignissimos repellat?</p> <!--alt Z=quebra de linha-->
 </body>
 </html>
